<resources>
    <string name="app_name">AndroidUtils2017</string>
    <string name="promotion_tips_share_for_reward">
        Refer a friend to register with your referral code and complete a investment</string>
    <string name="promotion_label_code">My Referral Code</string>
    <string name="promotion_action_apply">ENTER REFERRAL CODE</string>
    <string name="share_label_facebook">Facebook</string>
    <string name="share_label_message">SMS</string>
    <string name="share_label_email">Email</string>
    <string name="share_label_whatsapp">WhatsApp</string>
    <string name="share_label_messager">Messenger</string>
    <string name="other_share_enter">Share via other apps</string>
    <string name="share_app_not_install">"Not installed applications"</string>
    <string name="title_referral_code">Referral Code</string>

    <!-- 手动拍照界面 -->
    <string name="take_photo_tips_focus">Please position your card in this frame. Tap the screen to
        focus.
    </string>
    <!-- 人脸识别相关 -->
    <string name="face_album">Album</string>
    <string name="face_submit">Submit</string>
    <string name="face_batal">Cancel</string>
    <string name="face_tips">Please take a photo of your\nholding the card</string>
    <string name="take_photo_drag_move">Please drag and adjust the size to align with the frame.
    </string>

    <string name="face_detection_drag">Please drag and resize the photo to\nalign it with the
        frame
    </string>

    <string name="face_guide_start_tips">Before face detection, please put your ID card to the
        requested area
    </string>

    <string name="btn_start">START (%1$s)</string>
    <string name="face_detecting">Detecting...</string>
    <string name="face_start">Know</string>

    <!-- 脸部识别提示 -->
    <string name="face_to_up">Please move higher</string>
    <string name="face_to_down">Please move lower</string>
    <string name="face_to_left">Please move left</string>
    <string name="face_to_right">Please move right</string>
    <string name="face_to_near">Please move closer</string>
    <string name="face_to_far">Please move the farther</string>
    <string name="val_data_failed">Request time out %1$s</string>

    <!--Coupon-->
    <string name="coupon_title_coupons">Coupons</string>
    <string name="coupon_title_available">Available(%1$s)</string>
    <string name="coupon_title_used">Used(%1$s)</string>
    <string name="coupon_title_expired">Expired(%1$s)</string>
    <string name="coupon_experience_coupon">Experience Coupon</string><!--体验金-->
    <string name="coupon_cash_coupon">Cash Coupon</string><!--现金券-->
    <string name="coupon_interest_coupon">Interest Added Coupon</string><!--收益券-->
    <string name="coupon_no_result">You do not have a coupon yet&#8230;</string>
</resources>
